# supavision

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SUPERVISOR_NEXT_DIRECTION.md  docker-compose.yml  pyproject.toml  test_db.py  ui-guidance.md  web-auth.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
scripts/: migrate_devos.py
src/supavision/: __init__.py  __main__.py  _auth_check.py  agent_runner.py  blocklist.py  cli.py  code_evaluator.py  codebase_engine.py  config.py  db.py  discovery_diff.py  engine.py  evaluator.py  executor.py  mcp.py  metric_schemas.py  notifications.py  prompt_builder.py  report_handoff.py  report_vocab.py  resource_types.py  scanner.py  scheduler.py  ssh_keys.py  templates.py  tools.py
src/supavision/models/: __init__.py  core.py  health.py  work.py
src/supavision/prompt_templates/aws_account/: discovery.md  health_check.md
src/supavision/prompt_templates/codebase/: discovery.md  health_check.md
src/supavision/prompt_templates/database/: discovery.md  health_check.md
src/supavision/prompt_templates/database_mysql/: discovery.md  health_check.md
src/supavision/prompt_templates/database_postgresql/: discovery.md  health_check.md
src/supavision/prompt_templates/example/: discovery.md  health_check.md
src/supavision/prompt_templates/github_org/: discovery.md  health_check.md
src/supavision/prompt_templates/server/: discovery.md  health_check.md
src/supavision/scanner_patterns/: patterns.json
src/supavision/web/: app.py  auth.py  routes.py
src/supavision/web/dashboard/: __init__.py  activity.py  alerts.py  ask.py  auth.py  command_center.py  findings.py  metrics_page.py  overview.py  reports.py  resources.py  schedules.py  sessions.py  settings.py
src/supavision/web/static/: landing.css  style.css  supavision.js
src/supavision/web/templates/: _command_result.html  _finding_row.html  _glossary.html  _wizard_confirm.html  _wizard_credentials.html  _wizard_db_connection.html  _wizard_resource_info.html  _wizard_schedule.html  _wizard_ssh_key.html  _wizard_test_connection.html  activity.html  activity_live.html  alerts.html  ask.html  base.html  command_center.html  dashboard.html  dashboard_live_activity.html  dashboard_overview.html  error.html  finding_detail.html  findings.html  job_detail.html  landing.html  login.html  metrics.html  profile.html  report_detail.html  reports.html  resource_detail.html  resource_edit.html  resource_history.html  resource_new.html  resources_list.html  schedules.html  session_viewer.html  sessions.html  settings.html  settings_users.html
src/supervisor/: cli.py  config.py  db.py  engine.py  evaluator.py  executor.py  models.py  notifications.py  resource_types.py  scheduler.py  templates.py  tools.py
src/supervisor/web/: app.py  auth.py  dashboard.py  routes.py
src/supervisor/web/static/: style.css  supervisor.js
src/supervisor/web/templates/: base.html  dashboard.html  dashboard_overview.html  error.html  report_detail.html  resource_detail.html  resource_list.html  resource_new.html
templates/aws_account/: discovery.md  health_check.md
templates/example/: discovery.md  health_check.md
templates/github_org/: discovery.md  health_check.md
templates/server/: discovery.md  health_check.md
tests/: test_a8_rollout.py  test_api.py  test_auth.py  test_blocklist.py  test_cli_subset.py  test_code_evaluator.py  test_codebase_engine.py  test_dashboard.py  test_dashboard_routes.py  test_db.py  test_engine_streaming.py  test_evaluator.py  test_evaluator_dual_mode.py  test_executor.py  test_health_grid.py  test_lane_boundary.py  test_mcp.py  test_metrics.py  test_new_store_methods.py  test_notifications.py  test_notifications_a7.py  test_overview_streak.py  test_prompt_builder.py  test_prompt_injection.py  test_report_detail_render.py  test_report_diff.py  test_report_handoff.py  test_report_payload.py  test_report_persistence.py  test_scanner.py  test_scheduler.py  test_security.py  test_templates.py  test_tools.py  test_two_lane_integration.py  test_work_db.py  test_work_models.py
